--- a/app/src/main/res/layout/fragment_edit_card.xml
+++ b/app/src/main/res/layout/fragment_edit_card.xml
@@ -34,20 +34,17 @@
             android:id="@+id/edit_card_points_value"
             android:layout_column="1"
             android:gravity="start"
-                android:padding="3dip"
-                android:inputType="number"/>
+            android:padding="3dip"
+            android:inputType="number"/>
     </TableRow>
 
     <TableRow>
-
         <TextView
             android:layout_column="0"
             android:text="@string/question"
             android:padding="3dip"
             android:gravity="right"
             android:layout_width="wrap_content" />
-                android:id="@+id/textView2" />
-
         <EditText
             android:id="@+id/edit_card_question_value"
             android:layout_column="1"
@@ -55,74 +52,82 @@
             android:padding="3dip" />
     </TableRow>
 
-    <TableRow>
+    <TableRow
+        android:id="@+id/answer_row_1">
         <TextView
             android:layout_column="0"
             android:text="@string/answer"
             android:padding="3dip"
             android:gravity="right"
             android:layout_width="wrap_content" />
+        <EditText
+            android:id="@+id/edit_card_answer_field_1"
+            android:layout_column="1"
+            android:gravity="start"
+            android:padding="3dip" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/answer_row_2">
+        <TextView
+            android:layout_column="0"
+            android:text="@string/wrong_answer"
+            android:padding="3dip"
+            android:gravity="right"
+            android:layout_width="wrap_content" />
         <LinearLayout
-            android:id="@+id/edit_card_answer_layout_1"
+            android:id="@+id/edit_card_multiple_choice"
             android:orientation="vertical"
             android:layout_column="1"
+            android:padding="3dip"
             >
-            <EditText
-                android:id="@+id/edit_card_answer_field_1"
-                android:gravity="start"
-                android:padding="3dip"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/correct_answer" />
             <EditText
                 android:id="@+id/edit_card_answer_field_2"
                 android:gravity="start"
                 android:padding="3dip"
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone"
-                android:hint="@string/wrong_answer" />
+                android:layout_height="match_parent" />
             <EditText
                 android:id="@+id/edit_card_answer_field_3"
                 android:gravity="start"
                 android:padding="3dip"
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone"
-                android:hint="@string/wrong_answer" />
+                android:layout_height="match_parent" />
             <EditText
                 android:id="@+id/edit_card_answer_field_4"
                 android:gravity="start"
                 android:padding="3dip"
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone"
-                android:hint="@string/wrong_answer" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/edit_card_answer_layout_2"
-            android:orientation="vertical"
-            android:layout_column="1"
-            android:visibility="gone"
-            >
-            <RadioGroup
-                android:id="@+id/edit_card_true_or_false"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                >
-                <RadioButton
-                    android:id="@+id/edit_card_true"
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/_true"
-                    />
-                <RadioButton
-                    android:id="@+id/edit_card_false"
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/_false"
-                    />
-            </RadioGroup>
+                android:layout_height="match_parent" />
         </LinearLayout>
     </TableRow>
+
+    <TableRow
+        android:id="@+id/answer_row_3">
+        <TextView
+            android:layout_column="0"
+            android:text="@string/wrong_answer"
+            android:padding="3dip"
+            android:gravity="right"
+            android:layout_width="wrap_content" />
+        <RadioGroup
+            android:id="@+id/edit_card_true_or_false"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            >
+            <RadioButton
+                android:id="@+id/edit_card_true"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:text="@string/_true"
+                />
+            <RadioButton
+                android:id="@+id/edit_card_false"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:text="@string/_false"
+                />
+        </RadioGroup>
+    </TableRow>
+
 </TableLayout>
