--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,13 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+
+    <dimen name="md_text_size_headline">24sp</dimen>
+    <dimen name="md_text_size_title">20sp</dimen>
+    <dimen name="md_text_size_subheading">16sp</dimen>
     <dimen name="md_text_size_body">14sp</dimen>
+    <dimen name="md_text_size_caption">12sp</dimen>
+
+    <dimen name="md_text_size_button">14sp</dimen>
 </resources>
