--- a/app/src/main/res/layout/fragment_edit_card.xml
+++ b/app/src/main/res/layout/fragment_edit_card.xml
@@ -8,124 +8,156 @@
     android:padding="10dp"
     android:id="@+id/edit_card_top_level">
 
-    <TableRow>
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
         <TextView
             android:layout_column="0"
             android:text="@string/type"
             android:padding="3dip"
-            android:gravity="right"
-            android:layout_width="wrap_content" />
+            android:gravity="end"
+            android:layout_width="wrap_content"
+            />
         <Spinner
             android:id="@+id/edit_card_card_type_spinner"
             android:layout_column="1"
             android:gravity="center"
             android:padding="3dip"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             />
     </TableRow>
 
-    <TableRow>
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
         <TextView
             android:layout_column="0"
             android:text="@string/points"
             android:padding="3dip"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_width="wrap_content" />
         <EditText
             android:id="@+id/edit_card_points_value"
             android:layout_column="1"
             android:gravity="start"
             android:padding="3dip"
-            android:inputType="number"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:maxLength="8" />
     </TableRow>
 
-    <TableRow>
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
         <TextView
             android:layout_column="0"
             android:text="@string/question"
             android:padding="3dip"
-            android:gravity="right"
-            android:layout_width="wrap_content" />
+            android:gravity="end"
+            android:layout_width="wrap_content"/>
         <EditText
             android:id="@+id/edit_card_question_value"
             android:layout_column="1"
             android:gravity="start"
-            android:padding="3dip" />
+            android:padding="3dip"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="text"/>
     </TableRow>
 
     <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:id="@+id/answer_row_1">
         <TextView
             android:layout_column="0"
             android:text="@string/answer"
             android:padding="3dip"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_width="wrap_content" />
         <EditText
             android:id="@+id/edit_card_answer_field_1"
             android:layout_column="1"
             android:gravity="start"
-            android:padding="3dip" />
+            android:padding="3dip"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="text"/>
     </TableRow>
 
     <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:id="@+id/answer_row_2">
         <TextView
             android:layout_column="0"
             android:text="@string/wrong_answer"
             android:padding="3dip"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_width="wrap_content" />
         <LinearLayout
             android:id="@+id/edit_card_multiple_choice"
             android:orientation="vertical"
             android:layout_column="1"
             android:padding="3dip"
+            android:layout_width="match_parent"
             >
             <EditText
                 android:id="@+id/edit_card_answer_field_2"
                 android:gravity="start"
                 android:padding="3dip"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="text"/>
             <EditText
                 android:id="@+id/edit_card_answer_field_3"
                 android:gravity="start"
                 android:padding="3dip"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="text"/>
             <EditText
                 android:id="@+id/edit_card_answer_field_4"
                 android:gravity="start"
                 android:padding="3dip"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="text"/>
         </LinearLayout>
     </TableRow>
 
     <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:id="@+id/answer_row_3">
         <TextView
             android:layout_column="0"
             android:text="@string/wrong_answer"
             android:padding="3dip"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_width="wrap_content" />
         <RadioGroup
             android:id="@+id/edit_card_true_or_false"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             >
             <RadioButton
                 android:id="@+id/edit_card_true"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:paddingRight="20dp"
                 android:text="@string/_true"
                 />
             <RadioButton
                 android:id="@+id/edit_card_false"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:paddingRight="20dp"
                 android:text="@string/_false"
                 />
         </RadioGroup>
