--- a/app/src/main/res/layout/fragment_edit_card.xml
+++ b/app/src/main/res/layout/fragment_edit_card.xml
@@ -42,7 +42,7 @@
             android:layout_column="1"
             android:gravity="start"
             android:padding="3dip"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:maxLength="8" />
@@ -62,7 +62,7 @@
             android:layout_column="1"
             android:gravity="start"
             android:padding="3dip"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:inputType="text"/>
     </TableRow>
@@ -82,7 +82,7 @@
             android:layout_column="1"
             android:gravity="start"
             android:padding="3dip"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:inputType="text"/>
     </TableRow>
