--- a/app/src/main/res/layout/activity_manage_gameplay.xml
+++ b/app/src/main/res/layout/activity_manage_gameplay.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_manage_gameplay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,11 +19,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
+            <ImageButton
+                app:srcCompat="@drawable/end_circle"
+                android:id="@+id/end_game_option"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
+                android:padding="5dp"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/end_game"
+                android:background="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:onClick="endGame"/>
+
+            <TextView
                 android:id="@+id/gamePlayTimeHostText"
+                android:layout_toLeftOf="@id/end_game_option"
+                android:layout_toStartOf="@id/end_game_option"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
@@ -43,17 +59,10 @@
         android:paddingRight="@dimen/activity_vertical_margin"
         android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <Button
-            android:text="@string/end_game"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="endGame"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_card"
-            android:paddingTop="@dimen/activity_vertical_margin" />
+            android:text="@string/next_card" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,9 +77,9 @@
                 android:layout_weight="0.6" />
 
             <ImageButton
+                app:srcCompat="@drawable/ic_shuffle_24dp"
                 android:id="@+id/shuffle"
                 android:onClick="shuffle"
-                android:src="@drawable/shuffle"
                 android:scaleType="fitCenter"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
@@ -78,9 +87,9 @@
                 android:contentDescription="@string/shuffle"/>
 
             <ImageButton
+                app:srcCompat="@drawable/ic_send_24dp"
                 android:id="@+id/send_card"
                 android:onClick="sendCard"
-                android:src="@drawable/send"
                 android:scaleType="fitCenter"
                 android:layout_height="match_parent"
                 android:layout_width="0dp"
