--- a/app/src/main/res/layout/fragment_edit_card.xml
+++ b/app/src/main/res/layout/fragment_edit_card.xml
@@ -63,7 +63,7 @@
             android:gravity="start"
             android:padding="3dip"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:inputType="text"/>
     </TableRow>
 
@@ -83,48 +83,56 @@
             android:gravity="start"
             android:padding="3dip"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:inputType="text"/>
     </TableRow>
 
     <TableRow
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/answer_row_2">
+        android:id="@+id/answer_row_2_1">
         <TextView
             android:layout_column="0"
             android:text="@string/wrong_answer"
             android:padding="3dip"
             android:gravity="end"
             android:layout_width="wrap_content" />
-        <LinearLayout
-            android:id="@+id/edit_card_multiple_choice"
-            android:orientation="vertical"
+        <EditText
+            android:id="@+id/edit_card_answer_field_2"
+            android:gravity="start"
+            android:padding="3dip"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_width="match_parent"
-            >
-            <EditText
-                android:id="@+id/edit_card_answer_field_2"
-                android:gravity="start"
-                android:padding="3dip"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"/>
-            <EditText
-                android:id="@+id/edit_card_answer_field_3"
-                android:gravity="start"
-                android:padding="3dip"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"/>
-            <EditText
-                android:id="@+id/edit_card_answer_field_4"
-                android:gravity="start"
-                android:padding="3dip"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"/>
-        </LinearLayout>
+            android:inputType="text"/>
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:id="@+id/answer_row_2_2">
+        <EditText
+            android:id="@+id/edit_card_answer_field_3"
+            android:gravity="start"
+            android:padding="3dip"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:inputType="text"/>
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:id="@+id/answer_row_2_3">
+        <EditText
+            android:id="@+id/edit_card_answer_field_4"
+            android:gravity="start"
+            android:padding="3dip"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:inputType="text"/>
     </TableRow>
 
     <TableRow
