--- a/app/src/main/res/layout/activity_new_game_settings.xml
+++ b/app/src/main/res/layout/activity_new_game_settings.xml
@@ -7,77 +7,65 @@
     android:layout_height="match_parent"
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TableLayout
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:stretchColumns="1">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:layout_width="match_parent">
             <TextView
                 android:id="@+id/deck_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="0"
                 android:text="@string/select_deck"/>
             <Spinner
                 android:id="@+id/deck_spinner"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/deck_label"
-                android:layout_toRightOf="@id/deck_label"
-                android:layout_alignBaseline="@id/deck_label"/>
-        </RelativeLayout>
+                android:layout_column="1"/>
+        </TableRow>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:layout_width="match_parent">
             <TextView
                 android:id="@+id/game_label"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_column="0"
                 android:text="@string/game_time"/>
-            <EditText
-                android:id="@+id/game_minutes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:text="@string/min"
-                android:layout_toEndOf="@id/game_label"
-                android:layout_toRightOf="@id/game_label"
-                android:layout_alignBaseline="@id/game_label"/>
-            <TextView
-                android:id="@+id/game_semicolon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/semicolon"
-                android:layout_toEndOf="@id/game_minutes"
-                android:layout_toRightOf="@id/game_minutes"
-                android:layout_alignBaseline="@id/game_label"/>
-            <EditText
-                android:id="@+id/game_seconds"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:text="@string/no_time"
-                android:layout_toEndOf="@id/game_semicolon"
-                android:layout_toRightOf="@id/game_semicolon"
-                android:layout_alignBaseline="@id/game_label"/>
-        </RelativeLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_column="1">
+                <EditText
+                    android:id="@+id/game_minutes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:layout_column="1"
+                    android:text="@string/min"/>
+                <TextView
+                    android:id="@+id/game_semicolon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:text="@string/semicolon"/>
+                <EditText
+                    android:id="@+id/game_seconds"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:layout_column="1"
+                    android:text="@string/no_time"/>
+            </LinearLayout>
+        </TableRow>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:layout_width="match_parent">
             <TextView
                 android:id="@+id/card_type"
                 android:layout_width="wrap_content"
@@ -85,18 +73,13 @@
                 android:text="@string/card_type"/>
             <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                 android:id="@+id/card_type_spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/card_type"
-                android:layout_toRightOf="@id/card_type"
-                android:layout_alignBaseline="@id/card_type"/>
-        </RelativeLayout>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </TableRow>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:layout_width="match_parent">
             <TextView
                 android:id="@+id/card_count_label"
                 android:layout_width="wrap_content"
@@ -104,57 +87,58 @@
                 android:text="@string/card_count"/>
             <EditText
                 android:id="@+id/card_count"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="number"/>
-        </LinearLayout>
+        </TableRow>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:layout_width="match_parent">
             <TextView
                 android:id="@+id/card_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="0"
                 android:text="@string/card_time"/>
-            <EditText
-                android:id="@+id/card_minutes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:text="@string/no_time"
-                android:layout_toEndOf="@id/card_label"
-                android:layout_toRightOf="@id/card_label"
-                android:layout_alignBaseline="@id/card_label"/>
-            <TextView
-                android:id="@+id/card_semicolon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/semicolon"
-                android:layout_toEndOf="@id/card_minutes"
-                android:layout_toRightOf="@id/card_minutes"
-                android:layout_alignBaseline="@id/card_minutes"/>
-            <EditText
-                android:id="@+id/card_seconds"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:text="@string/three_secs"
-                android:layout_toEndOf="@id/card_semicolon"
-                android:layout_toRightOf="@id/card_semicolon"
-                android:layout_alignBaseline="@id/card_label"/>
-        </RelativeLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_column="1">
+                <EditText
+                    android:id="@+id/card_minutes"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_time"/>
+                <TextView
+                    android:id="@+id/card_semicolon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/semicolon"/>
+                <EditText
+                    android:id="@+id/card_seconds"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:text="@string/three_secs"/>
+            </LinearLayout>
+        </TableRow>
 
-        <Button
-            android:id="@+id/new_game"
-            android:text="@string/start_game"
-            android:layout_width="wrap_content"
+        <TableRow
             android:layout_height="wrap_content"
-            android:onClick="startGame"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_width="match_parent">
+            <Button
+                android:id="@+id/new_game"
+                android:text="@string/start_game"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="startGame"
+                android:layout_gravity="center_horizontal"/>
+        </TableRow>
 
-    </LinearLayout>
-
+    </TableLayout>
 </ScrollView>
