--- a/app/src/main/res/layout/activity_new_game_settings.xml
+++ b/app/src/main/res/layout/activity_new_game_settings.xml
@@ -5,7 +5,8 @@
     android:id="@+id/activity_new_game_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity" >
+    tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity"
+    android:padding="@dimen/activity_vertical_margin">
 
     <TableLayout
         android:layout_height="wrap_content"
@@ -14,7 +15,9 @@
 
         <TableRow
             android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
             <TextView
                 android:id="@+id/deck_label"
                 android:layout_width="wrap_content"
@@ -30,7 +33,9 @@
 
         <TableRow
             android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
             <TextView
                 android:id="@+id/game_label"
                 android:layout_width="wrap_content"
@@ -39,33 +44,36 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_column="1">
+                android:layout_column="1"
+                android:paddingStart="@dimen/spinner_padding"
+                android:paddingLeft="@dimen/spinner_padding"
+                android:paddingEnd="@dimen/spinner_padding"
+                android:paddingRight="@dimen/spinner_padding">
                 <EditText
                     android:id="@+id/game_minutes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="number"
-                    android:layout_column="1"
                     android:text="@string/min"/>
                 <TextView
                     android:id="@+id/game_semicolon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_column="1"
                     android:text="@string/semicolon"/>
                 <EditText
                     android:id="@+id/game_seconds"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="number"
-                    android:layout_column="1"
                     android:text="@string/no_time"/>
             </LinearLayout>
         </TableRow>
 
         <TableRow
             android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
             <TextView
                 android:id="@+id/card_type"
                 android:layout_width="wrap_content"
@@ -79,7 +87,9 @@
 
         <TableRow
             android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
             <TextView
                 android:id="@+id/card_count_label"
                 android:layout_width="wrap_content"
@@ -89,12 +99,18 @@
                 android:id="@+id/card_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="@dimen/spinner_padding"
+                android:paddingLeft="@dimen/spinner_padding"
+                android:paddingEnd="@dimen/spinner_padding"
+                android:paddingRight="@dimen/spinner_padding"
                 android:inputType="number"/>
         </TableRow>
 
         <TableRow
             android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
             <TextView
                 android:id="@+id/card_label"
                 android:layout_width="wrap_content"
@@ -104,8 +120,11 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_column="1">
+                android:layout_column="1"
+                android:paddingStart="@dimen/spinner_padding"
+                android:paddingLeft="@dimen/spinner_padding"
+                android:paddingEnd="@dimen/spinner_padding"
+                android:paddingRight="@dimen/spinner_padding">
                 <EditText
                     android:id="@+id/card_minutes"
                     android:inputType="number"
@@ -130,7 +149,8 @@
 
         <TableRow
             android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:gravity="center">
             <Button
                 android:id="@+id/new_game"
                 android:text="@string/start_game"
