--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="spinner_padding">4dp</dimen>
 
     <dimen name="md_text_size_headline">24sp</dimen>
     <dimen name="md_text_size_title">20sp</dimen>
